@@ -1,5 +1,7 @@
 2012-01-02 Mon  Jari Aalto  <jari.aalto@cante.net>
 
+	* tiny/tinydesk.el (tinydesk-unload): use `with-temp-buffer'.
+
 	* tiny/tinydebian.el (tinydebian-bts-mail-compose-macro):
 	Fix `mail-setup' for Emacs 24.x.
 
